done some change
done some change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         <br />
         <button id="act" type="">Fetch Data</button>
       </div>
-      
+      <div>
+        <h2 id="city"></h2>
+        <p id="temperature"></p>
+        <p id="conditions"></p>
+    </div>
+    
       <script src="script.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
